# book-store-server

./: Cargo.toml  Modelfile  schema.sql
api/: Cargo.toml
api/src/: config.rs  doc.rs  error.rs  main.rs  state.rs
api/src/controller/: mod.rs
api/src/controller/auth/: login.rs  mod.rs  register.rs
api/src/database/: mod.rs  user.rs
api/src/extractor/: jwt_claims.rs  mod.rs
api/src/middleware/: auth.rs
crates/database/: Cargo.toml
crates/database/src/: queries.rs
crates/database/src/queries/: author.rs  book.rs  category.rs  review.rs  user.rs
queries/: author.sql  book.sql  category.sql  review.sql  user.sql
src/: config.rs  doc.rs  error.rs  main.rs  state.rs  util.rs
src/controller/: book.rs  mod.rs
src/controller/auth/: google.rs  login.rs  mod.rs  register.rs
src/controller/author/: delete.rs  get.rs  get_all.rs  insert.rs  mod.rs  update.rs
src/controller/book/: delete.rs  get.rs  get_all.rs  get_review.rs  insert.rs  insert_review.rs  mod.rs  update.rs
src/controller/category/: delete.rs  get.rs  get_all.rs  insert.rs  mod.rs  update.rs
src/controller/review/: delete.rs  get.rs  get_by_book.rs  insert.rs  judge.rs  mod.rs  update.rs
src/database/: author.rs  book.rs  category.rs  mod.rs  review.rs  user.rs
src/error/: auth.rs  mod.rs
src/middleware/: auth.rs
