[workspace]
resolver = "3"
members = ["api"]

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
config = { version = "0.15.11", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "chrono", "env-filter"] }
