[package]
name = "book-store-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
bcrypt = "0.17.0"
config = { version = "0.15.11", default-features = false }
futures = "0.3.31"
jsonwebtoken = "9.3.1"
oauth2 = "4.4.2"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "chrono", "env-filter"] }
utoipa = { version = "5.3.1", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "serde"] }
