[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bcrypt = "0.17.0"
config.workspace = true
jsonwebtoken.workspace = true
oauth2 = "5.0.0"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde.workspace = true
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "serde"] }
